Fixing swagger return code issues, content type issues. Providing a repository base only with url
