# src/main/resources/swagger.yaml
@@ -35,12 +35,14 @@ paths:
           description: Repository object that needs to be added to the analyse
           required: true
           schema:
-            $ref: "#/definitions/Repository"
+            $ref: "#/definitions/RepositoryBase"
       responses:
         "201":
           description: Successful operation
           schema:
             $ref: "#/definitions/Repository"
+        "400":
+          description: Bad request
         "405":
           description: Invalid input
   /repository/all:
@@ -52,7 +54,6 @@ paths:
       description: ""
       operationId: findRepositories
       produces:
-        - application/xml
         - application/json
       responses:
         "200":
@@ -61,6 +62,8 @@ paths:
             type: array
             items:
               $ref: "#/definitions/Repository"
+        "400":
+          description: Bad request
         "404":
           description: Repositories not found
   "/repository/{repositoryId}":
@@ -86,6 +89,8 @@ paths:
           description: successful operation
           schema:
             $ref: "#/definitions/Repository"
+        "400":
+          description: Bad request
         "404":
           description: Repository not found
     delete:
@@ -107,10 +112,19 @@ paths:
           type: string
       responses:
         "204":
-          description: successful operation
+          description: No content
+        "400":
+          description: Bad request
         "404":
           description: Repository not found
 definitions:
+  RepositoryBase:
+    required:
+      - url
+    properties:
+      url:
+        type: string
+        example: https://github.com/owner/project
   Repository:
     required:
       - url
